Fly mode vs. Walk Mode Navigation Keyboard Controls #38561

Closed
opened 2014-02-09 16:46:23 +01:00 by Sir Torx Screwdriver · 10 comments

System Information
(irrelevant for this issue, no need to read)
Win8.1 64Bit
Intel Xeon e3
Nvidia gtx 670

Blender Version
Broken: 15f449c

Short description of error
Fly Navigation and Walk Navigation use different bottons for up/down for no reason.
Exact steps for others to reproduce the error
The recently added walk navigation uses WASD for moving back&forth sideways movement and Q and E for moving up/down in space.
The issue here is, that the existing "fly navigation" uses R and F for exactly that!

I would suggest to give those two navigation modes the same controls by default, I'd personally prefer the R and F method, as those keys are below each other, which supposedly makes more sense than having keys that are in the same row on the keyboard. Another reason would be that most people are probably most familiar with the controls of the existing fly mode navigation.

PS: This is more of a UI inconsistency issue than a bug, if it belongs somewhere else and I'm unnecesarily cluttering the bugtracker here please let me know :)

**System Information** (irrelevant for this issue, no need to read) Win8.1 64Bit Intel Xeon e3 Nvidia gtx 670 **Blender Version** Broken: 15f449c **Short description of error** Fly Navigation and Walk Navigation use different bottons for up/down for no reason. **Exact steps for others to reproduce the error** The recently added walk navigation uses WASD for moving back&forth sideways movement and Q and E for moving up/down in space. The issue here is, that the existing "fly navigation" uses R and F for exactly that! I would suggest to give those two navigation modes the same controls by default, I'd personally prefer the R and F method, as those keys are below each other, which supposedly makes more sense than having keys that are in the same row on the keyboard. Another reason would be that most people are probably most familiar with the controls of the existing fly mode navigation. PS: This is more of a UI inconsistency issue than a bug, if it belongs somewhere else and I'm unnecesarily cluttering the bugtracker here please let me know :)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @particleemitter

Added subscriber: @particleemitter

Added subscribers: @dfelinto, @ThomasDinges

Added subscribers: @dfelinto, @ThomasDinges
Dalai Felinto was assigned by Sergey Sharybin 2014-02-17 10:12:36 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

@dfelinto, please have a look here :)

@dfelinto, please have a look here :)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

I can't remember why we didn't change the shortcuts to the Fly Mode. @ideasman42 do you remember that?
I suspect it was because we were not showing the shortcuts, so we wanted to avoid changing known shortcuts (for fly mode).

For Walk mode it's better to use Q/E since we need the fingers free to use alt, ctrl, space. So my suggestion is to change Fly Mode to use Q/E.
Any objections?

I can't remember why we didn't change the shortcuts to the Fly Mode. @ideasman42 do you remember that? I suspect it was because we were not showing the shortcuts, so we wanted to avoid changing known shortcuts (for fly mode). For Walk mode it's better to use Q/E since we need the fingers free to use alt, ctrl, space. So my suggestion is to change Fly Mode to use Q/E. Any objections?

@dfelinto no objections.

@dfelinto no objections.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
This has been fixed: https://developer.blender.org/rBcbbc67a0b5759ef5153d9b18a825c42ad9a3792b @dfelinto: "Fix #38561" should be used to auto close a report, "fix - #38561" doesn't work. See http://wiki.blender.org/index.php/Dev:Doc/New_Committer_Info#Commit_Logs
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38561
No description provided.