fix - T38561: Fly mode vs. Walk Mode Navigation Keyboard Controls

* QE as up/down to Fly Navigator
* Alt as slow modifier to Fly Navigator
* Update on Walk header info

Note: I left the original RF/Ctrl shortcuts working for fly navigator
but they are no longer visible in the header info. So old users will
still be using what they were used to, while new ones get used to what
walk navigation is using.